# inventory-tracking

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml  run_api_tests.sh  run_tests.sh
.github/workflows/: ci.yml
app/: config.py  main.py
app/api/: README.md  deps.py
app/api/api_v1/: api.py  utils.py
app/api/api_v1/endpoints/: items.py
app/crud/: README.md  __init__.py  base.py  crud_items.py
app/db/: README.md  base_class.py  session.py
app/models/: OID.py  README.md  base.py  item.py
app/schemas/: OID.py  README.md  __init__.py  item.py
app/tests/: README.md  conftest.py  utils.py
app/tests/api/api_v1/tavern_tests/: common.yaml  test_inventory.tavern.yaml
app/tests/crud/: test_item.py
app/tests/integration/api_v1/tavern_tests/: meta.yaml  test_inventory.tavern.yaml
