[tool.poetry]
name = "inventory-tracking-api"
version = "0.1.0"
description = "Shopify's Backend Challenge"
authors = ["DukeNgn <triduc2311m@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
motor = "^2.5.1"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"
python-dotenv = "^0.19.2"
email-validator = "^1.1.3"
pydantic = "^1.9.0"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
black = "^21.12b0"
tavern = "^1.18.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
